syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (UserId) returns (UserResponse);
  rpc CreateNewUser (CreateUser) returns (UserResponse);
  rpc GetUserByEmail (UserEmail) returns (AllUserResponse);
}

message UserId {
  string id = 1;
}

message UserEmail {
  string email = 1;
}

message CreateUser {
  string login = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  string id = 1;
  string login = 2;
  string email = 3;
}

message AllUserResponse {
  string id = 1;
  string login = 2;
  string email = 3;
  string password = 4;
}